[tool.poetry]
name = "pipechain"
version = "0.1.0"
description = ""
authors = ["Michael Milton <ttmigueltt@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
numpy = "^1.21.3"
pipetools = "^1.0.1"
with-partial = ">=1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
