[tool.poetry]
name = "pipechain"
version = "0.1.0"
description = "Functional pipelines in Python using method chaining"
readme = "readme.md"
license = "MIT"
homepage = "https://github.com/multimeric/PipeChain"
repository = "https://github.com/multimeric/PipeChain"
include = [ "LICENSE" ]

authors = ["Michael Milton <michael.r.milton@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
numpy = "^1.21.3"
pipetools = "^1.0.1"
with-partial = ">=1.0.1"
jupyter = { version = "^1.0.0", optional = true}
nbconvert = "^6.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
